--- a/.gitignore
+++ b/.gitignore
@@ -18,7 +18,8 @@ coverage.*
 profile.cov
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
+apiserver.local.config
 
 # Go workspace file
 go.work
